# boogart

./: .gitignore  README.md  boogart_gdd.md  pyproject.toml  read.md
.github/workflows/: python-app.yml  release-windows.yml  windows-build.yml
boogart/: __init__.py  __main__.py  app.py  cleanup.py  runtime.py
boogart/actions/: __init__.py  dialogue.py
boogart/content/: __init__.py  dialogue.py
boogart/core/: __init__.py  debug.py  filesystem.py  growth.py  lifecycle.py  log.py  paths.py  state.py
boogart/mind/: __init__.py  actions.py  appraisal.py  brain.py  context.py  messages.py  needs.py  rooms.py  score.py  tuning.py
boogart/rendering/: __init__.py  png.py  sprite.py
boogart/ui/: __init__.py  terminal.py  watch.py
boogart/world/: __init__.py  classifiers.py  hazards.py  observations.py  scanner.py  scope.py  watcher.py
packaging/: Boogart.spec
scripts/: build_windows.ps1
tests/: __init__.py  test_app.py  test_appraisal_needs.py  test_brain.py  test_cleanup.py  test_dialogue.py  test_filesystem.py  test_gdd_runtime.py  test_growth.py  test_lifecycle.py  test_messages.py  test_movement_cleanup.py  test_runtime.py  test_scope.py  test_sprites.py  test_watcher.py  test_world.py
