[project]
name = "boogart"
version = "0.1.4"
description = "A small desktop companion that lives on your file system."
requires-python = ">=3.11"
dependencies = []

[project.scripts]
boogart = "boogart.app:main"
boogart-cleanup = "boogart.cleanup:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["boogart*"]
exclude = ["packaging*", "tests*", "scripts*"]

[tool.setuptools.package-data]
"boogart.rendering" = ["assets/*.png"]
